[package]
name = "cube-harvest"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
macroquad-particles = "0.2.2"
kube = { version = "1.1.0", features = ["derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
askama = "0.14.0"
serde_json = "1.0"

